# sg-restaurant-aeo

./: .env.example  .gitignore  CLAUDE.md  HERE_ARE_THE_NEXT_STEPS.md  IDEAS_FROM_DEFAULTTASTE.md  OBSERVATIONS.md  PACKAGING_PLAYBOOK.md  PLAN.md  README.md  pyproject.toml
.claude/skills/aeo-audit/: SKILL.md
.claude/skills/aeo-compare/: SKILL.md
.claude/skills/aeo-probe/: SKILL.md
.claude/skills/aeo-zombie/: SKILL.md
blog/: what_does_ai_think.md
dashboard/: app.py
data/: borderline_pairs.json  high_confidence_operational.csv  merge_log.json  unmatched_google.json
data/processed/: sabai_observations.md  sabai_probe_report.md
data/sabai_intervention/: web_audit.md
notebooks/: 01_exploratory.ipynb  02_model_comparison.ipynb  03_signal_analysis.ipynb
prompts/: discovery_prompts.json  extraction_prompt.txt
prompts/raw/: chatgpt_profound.json  claude_profound.json  gemini_profound.json  grok_profound.json  perplexity_profound.json
scripts/: apply_triage.py  consolidate_prompts.py  export_blog_charts.py  export_charts.py  fetch_google_places.py  full_sweep.py  parse_responses.py  place_id_dedup.py  resolve_entities.py  retry_perplexity.py  sabai_probe.py  search_on_sweep.py  stability_test.py  test_gemini_only.py  test_google_match.py  test_run.py
src/: __init__.py  analysis.py  cli.py  db.py  entity_resolution.py  google_places.py  models.py  query_runner.py  response_parser.py  stability_metrics.py
tests/: test_google_places.py
