[project]
name = "sg-restaurant-aeo"
version = "0.1.0"
description = "What Does AI Think About Singapore Restaurants? A systematic study of LLM-mediated restaurant discovery."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Spiff" },
]
keywords = ["aeo", "llm", "restaurants", "singapore", "research"]

dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tenacity>=8.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "streamlit>=1.30",
    "jupyter>=1.0",
    "nbformat>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
